// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InnerHtmlField component tests matches snapshot 1`] = `
<span
  dangerouslySetInnerHTML={
    Object {
      "__html": "<p>Test</p>",
    }
  }
  key="uuid/v4"
/>
`;

exports[`InnerHtmlField component tests matches snapshot when html is not existed 1`] = `""`;

exports[`InnerHtmlField component tests matches snapshot with WrapperTag 1`] = `
<section
  dangerouslySetInnerHTML={
    Object {
      "__html": "<p>Test</p>",
    }
  }
  key="uuid/v4"
/>
`;
